<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_addDog"
        android:title="@string/add_dog"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_addCat"
        android:title="@string/add_cat"
        app:showAsAction="always"
        />


    <item
        android:id="@+id/menu_register"
        android:title="@string/register"
        app:showAsAction="collapseActionView"
        />

    <item
        android:id="@+id/menu_login"
        android:title="@string/login"
        app:showAsAction="collapseActionView"
        />

    <item
        android:id="@+id/menu_logout"
        android:title="Logout"
        app:showAsAction="collapseActionView"
        />

</menu>