<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageButton
        android:id="@+id/ibAddCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:background="@color/colorAccent"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/add_btn" />

    <EditText
        android:id="@+id/etCatName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ibAddCat"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/etNameMargin"
        android:layout_marginLeft="@dimen/etMarginLeft"
        android:layout_marginRight="@dimen/etMarginRight"
        android:layout_marginStart="@dimen/etMarginStart"
        android:layout_marginTop="@dimen/etMarginTop"
        android:background="@drawable/input"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="@dimen/etPadding"
        android:hint="@string/cat_name" />

    <EditText
        android:id="@+id/etCatContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etCatName"
        android:layout_alignStart="@+id/etCatName"
        android:layout_below="@+id/etCatName"
        android:layout_marginBottom="@dimen/etNameMargin"
        android:layout_marginEnd="@dimen/etNameMargin"
        android:layout_marginLeft="@dimen/etMarginLeft"
        android:layout_marginRight="@dimen/etMarginRight"
        android:layout_marginTop="@dimen/etMarginTop"
        android:background="@drawable/input"
        android:ems="10"
        android:padding="@dimen/etPadding"
        android:hint="@string/contact"/>

    <EditText
        android:id="@+id/etCatDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etCatContact"
        android:layout_alignStart="@+id/etCatContact"
        android:layout_below="@+id/etCatContact"
        android:layout_marginBottom="@dimen/etMarginBottom"
        android:layout_marginEnd="@dimen/etNameMargin"
        android:layout_marginLeft="@dimen/etMarginLeft"
        android:layout_marginRight="@dimen/etMarginRight"
        android:background="@drawable/input"
        android:ems="10"
        android:inputType="textMultiLine"
        android:padding="@dimen/etPadding"
        android:hint="@string/cat_description"/>

    <fragment
        android:id="@+id/GoogleMap"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_below="@id/etCatDescription"
        tools:layout="@layout/activity_add_cat" />

    <Button
        android:id="@+id/bFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:layout_below="@id/GoogleMap"
        android:layout_marginTop="@dimen/buttonMarginTop"
        android:text="Finish"/>


</RelativeLayout>
</ScrollView>